Fixed issue where submit button was covered by footer of the login form

--- a/web/public/css/access.css
+++ b/web/public/css/access.css
@@ -188,6 +188,7 @@ article.login {
 .box .submit {
     height: 80px;
     margin-top: 12px;
+	z-index: 9;
 }
 
 .box .submit button {
@@ -230,6 +231,7 @@ article.login {
     position: relative;
     width: 100%;
     overflow: hidden;
+	z-index: 8;
 }
 
 .box .footer a.help-link {
